cambio de animaciones y uso de scss

--- a/paginas_html/que_es_el_eneagrama.html
+++ b/paginas_html/que_es_el_eneagrama.html
@@ -25,19 +25,19 @@
                 <nav class=" fixed-top p-0 col-12">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
                         <li class="nav-item "> 
-                            <a  class="texto-chico nav-link text-center text-primary fw-bold" href="../paginas_html/pagina_de_inicio.html">Inicio  </a> 
+                            <a  class="texto-chico nav-link text-center text-primary" href="../paginas_html/pagina_de_inicio.html">Inicio  </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico nav-link text-center text-primary fw-bold" href="../paginas_html/que_es_el_eneagrama.html">Qué es el eneagrama  </a> 
+                            <a  class="texto-chico nav-link text-center text-primary" href="../paginas_html/que_es_el_eneagrama.html">Qué es el eneagrama  </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary fw-bold" href="../paginas_html/eneatipos.html">Eneatipos </a> 
+                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/eneatipos.html">Eneatipos </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary fw-bold" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
+                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary fw-bold" href="../paginas_html/camino.html">Camino</a> 
+                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
@@ -51,19 +51,19 @@
                 <nav class=" fixed-top col-12 p-0">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
                         <li class="nav-item "> 
-                            <a  class="nav-link text-center text-primary fw-bold" href="../paginas_html/pagina_de_inicio.html">Inicio  </a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/pagina_de_inicio.html">Inicio  </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary fw-bold" href="../paginas_html/que_es_el_eneagrama.html">Qué es el eneagrama  </a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/que_es_el_eneagrama.html">Qué es el eneagrama  </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary fw-bold" href="../paginas_html/eneatipos.html">Eneatipos </a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/eneatipos.html">Eneatipos </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary fw-bold" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary fw-bold" href="../paginas_html/camino.html">Camino</a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
