retoques en navegacion

--- a/paginas_html/camino_animado.html
+++ b/paginas_html/camino_animado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Eneagrama, Eneatipos, personalidad, tipologia, autoconocimiento, autoayuda, camino, integracion, mandala">
+    <meta name="keywords" content="Eneagrama, Eneatipos, personalidad, tipologia, autoconocimiento, autoayuda, camino, mejora, calidad de vida, superacion, integracion, mandala">
     <meta name="description" content="Camino del Eneagrama, un herramienta efectiva para la mejora de la calidad de vida. Conoce tu camino de integracion.">
     <link rel="icon" type="image/x-icon" href="../imagenes/favicon_eneagrama.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
