--- a/paginas_html/eneatipos.html
+++ b/paginas_html/eneatipos.html
@@ -37,10 +37,11 @@
                             <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/eneatipos.html">Eneatipos </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
+                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a>   
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-none d-xl-block texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-xl-none texto-chico  nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a>
                         </li>
                     </Ul>
                 </nav>
@@ -67,7 +68,8 @@
                             <a  class="nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-none d-xl-block nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-xl-none nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
@@ -210,7 +212,7 @@
                                 Eneatipo 3 : El Triunfador
                                 <img src="../imagenes/imagen_del_3.jpeg" class="col-3 img-fluid" alt="Caricatura del 3">
                             </h2>
-                            <p class="col-12 font-merri texto-mediano">
+                            <p class="col-12 font-merri mt-5 texto-mediano">
                                 El éxito es la busqueda constante de esta personalidad, por eso suelen ser workaholicos , 
                                 para los 3 no existe la culminación del éxito como tal, pues se mantiene en una búsqueda constante por ser valorizado 
                                 por los demás, dentro de sus características sanas o esencia se encuentran el ser eficaz, vanidoso, ambicioso y cambiante. 
@@ -243,7 +245,7 @@
                                 Eneatipo 4 : El Individualista
                             <img src="../imagenes/imagen_del_4.jpeg" class="col-3 img-fluid" alt="Caricatura del 4">
                             </h2>
-                            <p class="col-12 font-merri texto-mediano">
+                            <p class="col-12 font-merri mt-5 texto-mediano">
                                 Nos encontramos con la personalidad qué, aunque no busca caerle bien a todos demanda atención del entorno, 
                                 pero por sus características no siempre cae bien en grupos y siempre dice lo que piensa, sus características positivas 
                                 o esencias se basan en el romanticismo, es soñador, melancólico, trágico y sus fuertes son 
@@ -275,7 +277,7 @@
                                 Eneatipo 5 : El Investigador
                                 <img src="../imagenes/imagen_del_5.jpeg" class="col-3 img-fluid" alt="Caricatura del 5">
                             </h2>
-                            <p class="col-12 font-merri texto-mediano">
+                            <p class="col-12 font-merri mt-5 texto-mediano">
                                 Bien sabemos que todos poseemos emociones y sentimientos propios de nuestra personalidad, pero en este caso de 
                                 personalidad tipo 5, prefieren guiarse por lo que pueden explicar con teoría, empirismo o datos válidos 
                                 y temen dar a conocer sus sentimientos. Al igual que los otros eneatipos poseen virtudes o esencias, 
@@ -309,7 +311,7 @@
                                 Eneatipo 6 : El Leal
                                 <img src="../imagenes/imagen_del_6.jpeg" class="col-3 img-fluid" alt="Caricatura del 6">
                             </h2>
-                            <p class="col-12 font-merri texto-mediano">
+                            <p class="col-12 font-merri mt-5 texto-mediano">
                                 Se trata del tipo de personalidad en donde el qué dirán y las opiniones de los demás vale más que la propia, 
                                 por ende tomar decisiones por sí mismo parece en algunos casos imposible, sin embargo no todo es malo y su esencia 
                                 es ser precavido, miedoso, preocupado e inseguro, aunque no son características buenas puede tener una visión amplia 
