--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Eneagrama, Eneatipos, personalidad, tipologia, autoconocimiento, crecimiento, autoayuda, camino, integracion, mandala">
+    <meta name="description" content="Eneagrama, un camino para la mejora de la calidad de vida. Conoce tu eneatipo y mirate profundamente">
     <link rel="icon" type="image/x-icon" href="./imagenes/favicon_eneagrama.jpg">
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -38,7 +40,8 @@
                             <a  class="texto-chico  nav-link text-center text-primary" href="./paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-xl-none texto-chico  nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-none d-xl-block texto-chico  nav-link text-center text-primary" href="./paginas_html/camino.html">Camino</a>
                         </li>
                     </Ul>
                 </nav>
@@ -65,7 +68,8 @@
                             <a  class="nav-link text-center text-primary" href="./paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-xl-none nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-none d-xl-block nav-link text-center text-primary" href="./paginas_html/camino.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
@@ -135,7 +139,6 @@
             *                     Pie de pagina para Contacto y Quienes Somos              *
             ********************************************************************************
         -->
-
         <footer class="container-fluid row">
         <!--
             ********************************************************************************  
