--- a/paginas_html/pagina_de_inicio.html
+++ b/paginas_html/pagina_de_inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Eneagrama, Eneatipos, personalidad, tipologia, autoconocimiento, autoayuda, camino, integracion, mandala">
+    <meta name="keywords" content="Eneagrama, Eneatipos, personalidad, tipologia, autoconocimiento, autoayuda, camino, crecimiento, integracion, mandala">
     <meta name="description" content="Eneagrama, un camino para la mejora de la calidad de vida. Conoce tu eneatipo y mirate profundamente">
     <link rel="icon" type="image/x-icon" href="../imagenes/favicon_eneagrama.jpg">
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
@@ -45,7 +45,8 @@
                             <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-none d-xl-block texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class=" d-xl-none texto-chico  nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a>
                         </li>
                     </Ul>
                 </nav>
@@ -72,7 +73,8 @@
                             <a  class="nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-none d-xl-block nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
+                            <a  class="d-xl-none nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
