--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                             <a  class="texto-chico  nav-link text-center text-primary" href="./paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class=" d-xl-none texto-chico  nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
-                            <a  class=" d-none d-xl-block texto-chico  nav-link text-center text-primary" href="./paginas_html/camino.html">Camino</a>
+                            <a  class="texto-chico  nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
@@ -68,8 +67,7 @@
                             <a  class="nav-link text-center text-primary" href="./paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="d-xl-none nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
-                            <a  class="d-none d-xl-block nav-link text-center text-primary" href="./paginas_html/camino.html">Camino</a> 
+                            <a  class="nav-link text-center text-primary" href="./paginas_html/camino_animado.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
