--- a/paginas_html/pagina_de_inicio.html
+++ b/paginas_html/pagina_de_inicio.html
@@ -45,8 +45,7 @@
                             <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class=" d-none d-xl-block texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
-                            <a  class=" d-xl-none texto-chico  nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a>
+                            <a  class="texto-chico  nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
@@ -73,8 +72,7 @@
                             <a  class="nav-link text-center text-primary" href="../paginas_html/test_de_autopercepcion.html"> Test </a> 
                         </li>
                         <li class="nav-item"> 
-                            <a  class="d-none d-xl-block nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
-                            <a  class="d-xl-none nav-link text-center text-primary" href="../paginas_html/camino.html">Camino</a> 
+                            <a  class="nav-link text-center text-primary" href="../paginas_html/camino_animado.html">Camino</a> 
                         </li>
                     </Ul>
                 </nav>
