--- a/paginas_html/camino.html
+++ b/paginas_html/camino.html
@@ -23,7 +23,7 @@
             ********************************************************************************
                 **************** texto mas chico para dispositivos pequeños *************
         -->   
-        <Section class="container-fluid ms-0 p-0"> 
+        <section class="container-fluid ms-0 p-0"> 
             <div class="row d-sm-none">
                 <nav class=" fixed-top p-0 col-12">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
@@ -95,7 +95,7 @@
             *             Explicacion para dispositivos pequeños                           *
             ********************************************************************************
         -->
-        <Section class="container d-sm-none">
+        <section class="container d-sm-none">
             <article class="row">
                 <div> 
                     <h4 class="col-12 text-center">
