--- a/paginas_html/eneatipos.html
+++ b/paginas_html/eneatipos.html
@@ -81,19 +81,19 @@
             *                                Titulos                                       *
             ********************************************************************************
         -->
-        <Header class="container">
+        <header class="container">
             <div class="row"> 
                 <h1 class="col-12 text-center m-0">
                      Eneatipos, las nueve personalidades básicas
                 </h1>
             </div>
-        </Header>
+        </header>
         <!--
             ********************************************************************************  
             *                                Exolicación general                           *
             ********************************************************************************
         -->
-        <Section class="row m-0 d-flex">
+        <section class="row m-0 d-flex">
             <p class="col-12 ps-3 pe-3 mb-0 m-0 fw-bold text-center font-merri">
                 El Eneagrama se basa en la teoría que cada persona tiene un eneatipo principal, que suele ser invariable a lo largo de la vida,
                 no obstante todos tenemos un poquito de cada tipología. Pero nuestra escencia estará siempre marcada por nuestro eneatipo 
