--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             ********************************************************************************
                 **************** texto mas chico para dispositivos pequeños *************
         -->    
-        <Section class="container-fluid ms-0 "> 
+        <section class="container-fluid ms-0 "> 
             <div class="row d-sm-none m-0 p-0">
                 <nav class=" fixed-top  col-12 p-0">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
@@ -72,7 +72,7 @@
                     </Ul>
                 </nav>
             </div>
-        </Section>
+        </section>
         <div>
             <br> <br>
         </div>
@@ -81,7 +81,7 @@
             *                                Titulos                                       *
             ********************************************************************************
         -->
-        <Header class="container-fluid m-0">
+        <header class="container-fluid m-0">
             <div class="row m-0"> 
                 <h1 class="col-12 text-center mb-1 ">
                     Eneagrama 
@@ -92,7 +92,7 @@
                     Un camino para el autoconocimiento 
                 </h5>
             </div>
-        </Header >
+        </header >
          <!--
             ********************************************************************************  
             *                                Contenido de la pagina de inicio              *
