--- a/paginas_html/camino_animado.html
+++ b/paginas_html/camino_animado.html
@@ -24,7 +24,7 @@
         ********************************************************************************
         **************** texto mas chico para dispositivos pequeños *************
         -->     
-       <Section class="container-fluid ms-0 "> 
+       <section class="container-fluid ms-0 "> 
            <div class="row d-sm-none">
                <nav class=" fixed-top p-0 col-12">
                    <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
@@ -73,7 +73,7 @@
                     </Ul>
                 </nav>
             </div>
-        </Section>
+        </section>
         <div>
            <br> <br> 
         </div>
