--- a/paginas_html/pagina_de_inicio.html
+++ b/paginas_html/pagina_de_inicio.html
@@ -28,7 +28,7 @@
             ********************************************************************************
                 **************** texto mas chico para dispositivos pequeños *************
         -->    
-        <Section class="container-fluid ms-0 p-0"> 
+        <section class="container-fluid ms-0 p-0"> 
             <div class="row d-sm-none">
                 <nav class=" fixed-top p-0 m-0 col-12">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
@@ -86,7 +86,7 @@
             *                                Titulos                                       *
             ********************************************************************************
         -->
-        <Header class="container-fluid m-0">
+        <header class="container-fluid m-0">
             <div class="row m-0"> 
                 <h1 class="col-12 text-center mb-1 ">
                     Eneagrama 
@@ -97,7 +97,7 @@
                     Un camino para el autoconocimiento 
                 </h5>
             </div>
-        </Header >
+        </header >
          <!--
             ********************************************************************************  
             *                                Contenido de la pagina de inicio              *
