--- a/paginas_html/que_es_el_eneagrama.html
+++ b/paginas_html/que_es_el_eneagrama.html
@@ -23,7 +23,7 @@
             ********************************************************************************
                 **************** texto mas chico para dispositivos pequeños *************
         -->    
-        <Section class="container-fluid ms-0 "> 
+        <section class="container-fluid ms-0 "> 
             <div class="row d-sm-none">
                 <nav class=" fixed-top p-0 col-12">
                     <ul class="navbar-expand justify-content-center text-center text-primary fw-bold nav  list-group-horizontal" style="background-color: #e3f2fd;">
@@ -81,7 +81,7 @@
             *                                Titulos                                       *
             ********************************************************************************
         -->
-        <Header class="col-12 container">
+        <header class="col-12 container">
             <div class="col-12">
                 <h1 class=" text-center">
                     &#191 Qué es el eneagrama ?
